--- a/navbar-top-fixed.css
+++ b/navbar-top-fixed.css
@@ -4,8 +4,66 @@ body {
   padding-top: 4.5rem;
 }
 
+.navbar{
+  height: 50px;
+}
+
 .navbar-nav > li{
   margin-left:30px;
   margin-right:30px;
 }
+.btnOrangeHead{
+  background:rgb(201, 94, 22);
+  text-decoration:none;
+  height: 30px;
+  text-align: center; 
+}
+.btnOrangeHead:hover{
+  background: rgb(192, 146, 21);
+}
 
+.bgazure{
+  background:rgb(69, 78, 202);
+}
+
+
+
+.navbar-brand{
+  text-indent: 90px;
+  background: url('mockups/assets/images/main-page/logonetterULTIMO.svg');
+  width: 90px;
+  height: 23px;
+}
+
+.btnOrange{
+  background:rgb(201, 94, 22);
+  text-decoration:none;
+}
+.btnOrange:hover{
+  background: rgb(192, 146, 21);
+}
+
+.btnWhite{
+  background: white;
+  color:black;
+  text-decoration: none;
+}
+
+.btnWhite:hover{
+  background: rgb(192, 146, 21);
+}
+
+.box{
+  align-items: center;
+  text-align: center;
+  width: 300px;
+  display: inline-block;
+}
+.mini-box{
+  background-position: center;
+  height: 80px;
+  width: 80px;
+}
+.center{
+  background: url(url) no-repeat center;
+}
