--- a/homepage.css
+++ b/homepage.css
@@ -1,50 +1,130 @@
+/*navbar items space beetween + underscore line - start */
 .navbar-nav > li{
   margin-left:20px;
+  margin-top: 3px;
+  margin-bottom: 3px;
   margin-right:20px;
   border-bottom: 6px solid transparent;
 }
 
-li:hover{
-  border-bottom: 6px solid tomato;
+.navbar-nav > li:hover{
+  border-bottom: 6px solid orange;
 }
 
 li:active{
-  border-bottom: 6px solid tomato;
+  color: orange;
+  border-bottom: 6px solido orange;
+}
+/*navbar items space beetween + underscore line - end */
+
+
+/*navbar items color change - start*/
+.navbar-nav .nav-item .nav-link {
+  color:white;
+}
+.navbar-nav .nav-item:active .nav-link,
+.navbar-nav .nav-item:hover .nav-link {
+  color:orange;
+}
+/*navbar items color change -end */
+
+/* buttons custom style - start */
+
+.navbar-nav > button{
+  margin-left:50px;
+  color: black;
+  background-color: orange;
+  border-color: orange;
 }
 
-.btn{
-  margin-left: 30px;
-  background-color: tomato;
-  border-color: tomato;
+.navbar-nav > button:hover{
+  background-color: red;
+  border-color: red;
   color: white;
-
-}
-.btn:hover{
-  background-color: orangered;
-  border-color: orangered;
-
-  color: white;
 }
 
-.white-button{
+#button1{
+  color:black;
+  background-color: orange;
+  border-color: orange;
+}
 
-  background-color: white;
+#button1:hover{
+  color:white;
+  background-color: red;
+  border-color: red;
+}
+
+#button2{
+  background-color:white;
   border-color: black;
-
+  color: black;
 }
 
-.white-button:hover{
-  background-color: orangered;
-  border-color: orangered;
-
+#button2:hover{
+  background-color: black;
   color: white;
 }
 
-.text-dark{
-  text-decoration: none;
 
+#button3{
+  position:absolute;
+  bottom:5px;
+  left:5px;
+  color:black;
+  background-color: orange;
+  border-color: orange;
 }
-.text-dark:hover{
+
+#button3:hover{
+  color:white;
+  background-color: red;
+  border-color: red;
+}
+
+#button4{
+  position:absolute;
+  bottom:5px;
+  left:5px;
+  color:white;
+  background-color: red;
+  border-color: red;
+}
+
+#button4:hover{
+  color:black;
+  background-color: orange;
+  border-color: orange;
+}
+
+#button5{
+  background-color: black;
+  border-color: black;
+  color: white;
+}
+
+#button5:hover{
+  background-color:white;
+  border-color: black;
+  color: black;
+}
+
+/* buttons custom style - end */
+
+/* card style - start */
+.flip-card:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+/* card style - end */
+
+/*footer style - start */
+
+.bg-light .text-center .text{
+  color: black;
+  text-decoration: none;
+}
+.bg-light .text-center .text:hover{
   color: goldenrod;
-  text-decoration:underline;
 }
+
+/*footer style - end */
