--- a/homepage.css
+++ b/homepage.css
@@ -68,9 +68,6 @@ li:active{
 
 
 #button3{
-  position:absolute;
-  bottom:5px;
-  left:5px;
   color:black;
   background-color: orange;
   border-color: orange;
@@ -108,13 +105,16 @@ li:active{
   border-color: black;
   color: black;
 }
+#button-grid{
+   position: absolute;
+   bottom:5px;
+   right: 5px;
+}
 
 /* buttons custom style - end */
 
 /* card style - start */
-.flip-card:hover{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
 /* card style - end */
 
 /*footer style - start */
@@ -128,3 +128,99 @@ li:active{
 }
 
 /*footer style - end */
+
+
+/* card style - start */
+
+.flip-card-3D-wrapper {
+  width: 235px;
+  height: 250px;
+  position: relative;
+  -o-perspective: 900px;
+  -webkit-perspective: 900px;
+  -ms-perspective: 900px;
+  perspective: 900px;
+  margin: 0 auto;
+}
+#flip-card1,
+#flip-card2,
+#flip-card3,
+#flip-card4{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  -o-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  -o-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.do-flip {
+  -o-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+#flip-card-btn-turn-to-back1, #flip-card-btn-turn-to-front1 ,
+#flip-card-btn-turn-to-back2, #flip-card-btn-turn-to-front2 ,
+#flip-card-btn-turn-to-back3, #flip-card-btn-turn-to-front3 ,
+#flip-card-btn-turn-to-back4, #flip-card-btn-turn-to-front4 {
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  cursor: pointer;
+  visibility: hidden;
+  border:none;
+}
+#flip-card1 .flip-card-front, #flip-card1 .flip-card-back,
+#flip-card2 .flip-card-front, #flip-card2 .flip-card-back,
+#flip-card3 .flip-card-front, #flip-card3 .flip-card-back,
+#flip-card4 .flip-card-front, #flip-card4 .flip-card-back{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  position: absolute;
+  -o-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  z-index: 2;
+  -webkit-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+  -moz-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+  box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+}
+#flip-card1 .flip-card-front,
+#flip-card2 .flip-card-front,
+#flip-card3 .flip-card-front,
+#flip-card4 .flip-card-front{
+    background: lightgreen;
+    border:1px solid grey;
+}
+#flip-card1 .flip-card-back,
+#flip-card2 .flip-card-back,
+#flip-card3 .flip-card-back,
+#flip-card4 .flip-card-back{
+    background: lightblue;
+    border: 1px solid grey;
+    -o-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+#flip-card1 .flip-card-front p, #flip-card1 .flip-card-back p,
+#flip-card2 .flip-card-front p, #flip-card2 .flip-card-back p,
+#flip-card3 .flip-card-front p, #flip-card3 .flip-card-back p,
+#flip-card4 .flip-card-front p, #flip-card4 .flip-card-back p{
+  color: grey;
+  display: block;
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+/* card style - end */
