finished layout - homepage

--- a/homepage.css
+++ b/homepage.css
@@ -1,58 +1,26 @@
-/*navbar items space beetween + underscore line - start */
-.navbar-nav > li{
-  margin-left:20px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  margin-right:20px;
-  border-bottom: 6px solid transparent;
+#first-container{
+  padding-left: 0;
 }
 
-.navbar-nav > li:hover{
-  border-bottom: 6px solid orange;
+@media (min-width: 550px) {
+    #first-container {
+      padding-left: 100px;
+    }
 }
 
-li:active{
-  color: orange;
-  border-bottom: 6px solido orange;
-}
-/*navbar items space beetween + underscore line - end */
-
-
-/*navbar items color change - start*/
-.navbar-nav .nav-item .nav-link {
-  color:white;
-}
-.navbar-nav .nav-item:active .nav-link,
-.navbar-nav .nav-item:hover .nav-link {
-  color:orange;
-}
-/*navbar items color change -end */
 
 /* buttons custom style - start */
 
-.navbar-nav > button{
-  margin-left:50px;
-  color: black;
-  background-color: orange;
-  border-color: orange;
-}
-
-.navbar-nav > button:hover{
-  background-color: red;
-  border-color: red;
-  color: white;
-}
-
 #button1{
   color:black;
-  background-color: orange;
-  border-color: orange;
+  background-color: #ff5353;
+  border-color: #ff5353;
 }
 
 #button1:hover{
   color:white;
-  background-color: red;
-  border-color: red;
+  background-color: #c2102a;
+  border-color: #c2102a;
 }
 
 #button2{
@@ -69,14 +37,14 @@ li:active{
 
 #button3{
   color:black;
-  background-color: orange;
-  border-color: orange;
+  background-color: #ff5353;
+  border-color: #ff5353;
 }
 
 #button3:hover{
   color:white;
-  background-color: red;
-  border-color: red;
+  background-color: #c2102a;
+  border-color: #c2102a;
 }
 
 #button4{
@@ -84,14 +52,14 @@ li:active{
   bottom:5px;
   left:5px;
   color:white;
-  background-color: red;
-  border-color: red;
+  background-color: #c2102a;
+  border-color: #c2102a;
 }
 
 #button4:hover{
   color:black;
-  background-color: orange;
-  border-color: orange;
+  background-color: #ff5353;
+  border-color: #ff5353;
 }
 
 #button5{
@@ -115,23 +83,6 @@ li:active{
 
 /* card style - start */
 
-/* card style - end */
-
-/*footer style - start */
-
-.bg-light .text-center .text{
-  color: black;
-  text-decoration: none;
-}
-.bg-light .text-center .text:hover{
-  color: goldenrod;
-}
-
-/*footer style - end */
-
-
-/* card style - start */
-
 .flip-card-3D-wrapper {
   width: 235px;
   height: 250px;
@@ -140,7 +91,8 @@ li:active{
   -webkit-perspective: 900px;
   -ms-perspective: 900px;
   perspective: 900px;
-  margin: 0 auto;
+  margin-top:10px;
+  margin-bottom: 10px;
 }
 #flip-card1,
 #flip-card2,
@@ -170,8 +122,8 @@ li:active{
 #flip-card-btn-turn-to-back2, #flip-card-btn-turn-to-front2 ,
 #flip-card-btn-turn-to-back3, #flip-card-btn-turn-to-front3 ,
 #flip-card-btn-turn-to-back4, #flip-card-btn-turn-to-front4 {
-  width: 40px;
-  height: 40px;
+  width: fit-content;
+  height: fit-content;
   background: transparent;
   cursor: pointer;
   visibility: hidden;
@@ -198,15 +150,15 @@ li:active{
 #flip-card2 .flip-card-front,
 #flip-card3 .flip-card-front,
 #flip-card4 .flip-card-front{
-    background: lightgreen;
-    border:1px solid grey;
+    background: #424242;
+    border:1px solid #424242;
 }
 #flip-card1 .flip-card-back,
 #flip-card2 .flip-card-back,
 #flip-card3 .flip-card-back,
 #flip-card4 .flip-card-back{
-    background: lightblue;
-    border: 1px solid grey;
+    background: #eeee;
+    border: 1px solid #eeee;
     -o-transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
     -ms-transform: rotateY(180deg);
@@ -224,3 +176,54 @@ li:active{
 }
 
 /* card style - end */
+
+/* client flips - start*/
+
+#client-flip-card {
+  background-color: transparent;
+  width: 250px;
+  height: 200px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+#client-flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+#client-flip-card:hover #client-flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+#client-flip-card-front, #client-flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+#client-flip-card-front {
+  background-color: #eeee;
+  color: black;
+}
+
+/* Style the back side */
+#client-flip-card-back {
+  background-color: #424242;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/*client flips - end*/
