--- a/shared css/navbar.css
+++ b/shared css/navbar.css
@@ -4,30 +4,55 @@
   padding-bottom: 0;
 }
 
-@media (min-width: 1000px) {
-  .navbar-nav > li{
-    margin-left:20px;
-    margin-right:20px;
-  }
+li.nav-item{
+  max-width: 120px;
 }
-
 
 .navbar-brand{
   padding-top: 3px;
   padding-bottom: 3px;
+  margin-left:0;
+  margin-right:0;
+}
+a.navbar-brand{
+  margin:0;
+  padding:0;
 }
 
 .navbar-nav > li{
   border-bottom: 6px solid transparent;
   padding-top: 0;
   padding-bottom: 0;
+  margin-left:0px;
+  margin-right:0px;
+}
+
+@media (min-width: 1000px) {
+  .navbar-nav > li{
+    margin-left:10px;
+    margin-right:10px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .navbar-nav > li{
+    margin-left:20px;
+    margin-right:20px;
+  }
+}
+/*navbar items color change - start*/
+.navbar-nav .nav-item .nav-link {
+  color:white;
+}
+.navbar-nav .nav-item:hover .nav-link {
+  color:#ff5252;
 }
 
 .navbar-nav > li:hover{
   border-bottom: 6px solid #ff5150;
 }
 
-li:active{
+a.nav-link.active{
   color: #ff5150;
   border-bottom: 6px solido #ff5150;
 }
@@ -37,7 +62,7 @@ li:active{
   padding-bottom:0;
   margin-top: 1px;
   margin-bottom: 5px;
-  height: 40px;
+  height: 30px;
   color:black;
   background-color: #ff5353;
   border-color: #ff5353;
@@ -51,12 +76,35 @@ li:active{
 /*navbar items space beetween + underscore line - end */
 
 
-/*navbar items color change - start*/
-.navbar-nav .nav-item .nav-link {
-  color:white;
-}
-.navbar-nav .nav-item:active .nav-link,
-.navbar-nav .nav-item:hover .nav-link {
-  color:#ff5252;
-}
+
 /*navbar items color change -end */
+
+/*custom navbar breackdown*/
+
+@media (min-width: 850px){
+  .navbar-expand-custom {
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+  }
+  .navbar-expand-custom .navbar-nav {
+      flex-direction: row;
+  }
+  .navbar-expand-custom .dropdown-menu {
+      position: absolute;
+  }
+  .navbar-expand-custom .nav-link {
+      padding-right: .5rem;
+      padding-left: .5rem;
+  }
+  .navbar-expand-custom > .container {
+      flex-wrap: nowrap;
+  }
+  .navbar-expand-custom .navbar-collapse {
+      display: flex!important;
+      flex-basis: auto;
+  }
+  .navbar-expand-custom .navbar-toggler {
+      display: none;
+  }
+}
