--- a/components/Form.html
+++ b/components/Form.html
@@ -38,6 +38,7 @@
     <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/navbar.css" rel="stylesheet">
     <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/footer.css" rel="stylesheet">
     <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/buttons.css" rel="stylesheet">
+    <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/language.css" rel="stylesheet">
     <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/card-flipper.css" rel="stylesheet">
     <link href="file:///home/manse/git/netter/netter-cloudprovider-website/css/form.css" rel="stylesheet">
 </head>
@@ -47,19 +48,28 @@
     <div id="navbar-container">
     </div>
 
+<div class="d-flex justify-content-end language-link-container">  
+
+    <a class="list-group-item active" href="#" id="it" onclick="setLanguage('it')">Italiano</a> 
+    <a class="list-group-item" href="#" id="en" onclick="setLanguage('en')">English</a>
+
+</div>  
+
+<div id="div1"></div>
+
 
     <div class="container container-vertical-padding">
-        <h1> Registrati alla piattaforma Netter</h1>
+        <h1 id="page-title"> Registrati alla piattaforma Netter</h1>
 
         <form class="row g-3">
-            <h3 class="container-title">Dati Azienda</h3>
+            <h3 class="container-title" id="title-1">Dati Azienda</h3>
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Nome Azienda</label>
+                <label for="inputEmail4" class="form-label" id="Nome-Azienda-label">Nome Azienda</label>
                 <input type="email" class="form-control" id="Nome-Azienda">
             </div>
 
             <div class="col-md-6">
-                <label for="inputState" class="form-label">Settore di Business</label>
+                <label id="Settore-di-Business-label" for="inputState" class="form-label">Settore di Business</label>
                 <select id="Settore-di-Business" class="form-select">
                     <option selected>Seleziona...</option>
                     <option>Agricoltura e allevamento</option>
@@ -96,19 +106,19 @@
                 </select>
             </div>
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Partita IVA</label>
+                <label for="inputEmail4" id="Partita-IVA-label" class="form-label">Partita IVA</label>
                 <input type="email" class="form-control" id="Partita-IVA">
             </div>
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Telefono</label>
+                <label for="inputEmail4" id="Telefono-label" class="form-label">Telefono</label>
                 <input type="email" class="form-control" id="Telefono">
             </div>
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Stato</label>
+                <label for="inputEmail4" id="Stato-label" class="form-label">Stato</label>
                 <input type="email" class="form-control" id="Stato">
             </div>
             <div class="col-md-6">
-                <label for="inputState" class="form-label">Regione</label>
+                <label for="inputState" id="Regione-label" class="form-label">Regione</label>
                 <select id="Regione" class="form-select">
                     <option selected>Seleziona...</option>
                     <option>Abruzzo</option>
@@ -134,7 +144,7 @@
                 </select>
             </div>
             <div class="col-md-6">
-                <label for="inputState" class="form-label">Città</label>
+                <label for="inputState" id="Citta-label" class="form-label">Città</label>
                 <select id="Citta" class="form-select">
                     <option selected>Seleziona...</option>
                     <option>AGRIGENTO </option>
@@ -250,63 +260,63 @@
                 </select>
             </div>
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Comune</label>
+                <label for="inputEmail4" id="Comune-label" class="form-label">Comune</label>
                 <input type="email" class="form-control" id="Comune">
             </div>
             <div class="col-md-8">
-                <label for="inputEmail4" class="form-label">Indirizzo</label>
+                <label for="inputEmail4" id="Indirizzo-label" class="form-label">Indirizzo</label>
                 <input type="email" class="form-control" id="Indirizzo">
             </div>
 
             <h3 class="container-title">Artwork</h3>
 
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Logo Azienda</label>
+                <label for="inputEmail4" class="form-label" id="Logo-Azienda-label" >Logo Azienda</label>
                 <div class="input-group mb-3">
                     <input type="file" class="form-control" id="Logo-Azienda">
                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                   </div>
               </div>
               <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Immagine Aziendale 1</label>
+                <label for="inputEmail4" class="form-label" id="Immagine-Aziendale-1-label">Immagine Aziendale 1</label>
                 <div class="input-group mb-3">
                     <input type="file" class="form-control" id="Immagine-Aziendale-1">
                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                   </div>
               </div>
               <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Immagine Aziendale 2</label>
+                <label for="inputEmail4" class="form-label" id="Immagine-Aziendale-2-label">Immagine Aziendale 2</label>
                 <div class="input-group mb-3">
                     <input type="file" class="form-control" id="Immagine-Aziendale-2">
                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                   </div>
               </div>
               <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Immagine Aziendale 3</label>
+                <label for="inputEmail4" class="form-label" id="Immagine-Aziendale-3-label">Immagine Aziendale 3</label>
                 <div class="input-group mb-3">
                     <input type="file" class="form-control" id="Immagine-Aziendale-3">
                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                   </div>
               </div>
-              <h3 class="container-title">Utente di servizio</h3>
+              <h3 class="container-title"  id="title-2">Utente di servizio</h3>
               <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Nome</label>
+                <label for="inputEmail4" class="form-label" id="Nome-Utente-label">Nome</label>
                 <input type="email" class="form-control" id="Nome-Utente">
             </div>
             <div class="col-md-6">
-              <label for="inputEmail4" class="form-label">Cognome</label>
+              <label for="inputEmail4" class="form-label" id="Cognome-Utente-label">Cognome</label>
               <input type="email" class="form-control" id="Cognome-Utente">
           </div>
           <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Username</label>
+            <label for="inputEmail4" class="form-label" id="Username-label">Username</label>
             <input type="email" class="form-control" id="Username">
         </div>
         <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Password</label>
+          <label for="inputPassword4" class="form-label" id="Password-label">Password</label>
           <input type="password" class="form-control" id="Password">
         </div>
         <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Conferma Password</label>
+          <label for="inputPassword4" class="form-label" id="Conferma-Password-label">Conferma Password</label>
           <input type="password" class="form-control" id="Conferma-Password">
         </div>
         <div class="col-md-6">
@@ -314,20 +324,20 @@
           <input type="email" class="form-control" id="Email">
       </div>
       <div class="col-md-6">
-          <label for="inputState" class="form-label">Metodo invio notifiche</label>
-          <select id="inputState" class="form-select">
+          <label for="inputState" class="form-label" id="Metodo-invio-notifiche-label">Metodo invio notifiche</label>
+          <select id="Metodo-invio-notifiche" class="form-select">
               <option selected>Seleziona...</option>
               <option>Email</option>
               <option>Telefono</option>
           </select>
       </div>
       <div class="col-md-6">
-        <label for="inputEmail4" class="form-label">Telefono-User</label>
+        <label for="inputEmail4" class="form-label"  id="Telefono-User-label">Telefono-User</label>
         <input type="email" class="form-control" id="Telefono-User">
     </div>
     <div class="col-md-6">
-        <label for="inputState" class="form-label">Fuso orario</label>
-        <select id="inputState" class="form-select">
+        <label for="inputState" class="form-label" id="Fuso-orario-label" >Fuso orario</label>
+        <select id="Fuso-orario" class="form-select">
             <option selected>Seleziona...</option>
             <option>GMT-11</option>
             <option>GMT-10</option>
@@ -355,14 +365,14 @@
         </select>
     </div>
     <div class="col-md-6">
-      <label for="inputEmail4" class="form-label">Lingua</label>
+      <label for="inputEmail4" class="form-label"  id="Lingua-label">Lingua</label>
       <input type="email" class="form-control" id="Lingua">
   </div>
 
             <div class="col-12">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
+                    <label class="form-check-label" for="gridCheck" id="gridCheck-label" >
                         Autorizzo Netter S.R.L. al trattamento dei dati sopra riportati in conformità alla normativa applicabile
                          in materia di protezione dei dati personali, come indicato nell'informativa sulla Privacy. Tali dati 
                          verranno trattati elettronicamente, o in forma cartacea, dai soggetti incaricati ai sensi della 
@@ -372,7 +382,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary button-orange-to-red">Crea un account</button>
+                <button class="btn btn-primary button-orange-to-red" type="button" id="create-account-button"  onclick="collectUserData()">Crea un account</button>
             </div>
         </form>
 
@@ -385,6 +395,7 @@
 
     <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/navbar.js"></script>
     <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/footer.js"></script>
+    <script src="file:///home/manse/git/netter/netter-cloudprovider-website/js/form.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
