--- a/css/sessioni.css
+++ b/css/sessioni.css
@@ -1,5 +1,5 @@
 .container-top-page{
-  background-image: url(file:///home/manse/git/netter/netter-cloudprovider-website/img/bg_sessioni.jpg);
+  background-image: url(./../img/bg_sessioni.jpg);
   background-size: 100% 100%;
    height:fit-content;
    padding-left: 10px;
