--- a/css/blog.css
+++ b/css/blog.css
@@ -15,3 +15,31 @@
     }
 }
 
+#container-blog-cards{
+  margin: 10px;
+  border-radius: 5px;
+  border:1px groove;
+  background-color: rgba(238, 238, 238, 0.597);
+}
+
+.card{
+  width: 20%;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 5px;
+  background-color:#eeee;
+  margin: 10px;
+}
+.card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transform: scale3d(1.006, 1.006, 1);
+}
+
+.article-title{
+  color:#c2102a;
+  font-weight: 400;
+}
+.article-paragraph{
+  color:black;
+  font-weight: 300;
+}
