--- a/css/blog.css
+++ b/css/blog.css
@@ -29,6 +29,8 @@
   border-radius: 5px;
   background-color:#eeee;
   margin: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .card:hover{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -38,8 +40,11 @@
 .article-title{
   color:#c2102a;
   font-weight: 400;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 .article-paragraph{
   color:black;
   font-weight: 300;
+  margin: 10px;
 }
